SideStepper: raise hide breakpoint from 1280px to 1400px to prevent overlap on common laptop widths

--- a/src/components/SideStepper.css
+++ b/src/components/SideStepper.css
@@ -85,7 +85,7 @@
   color: var(--color-accent);
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1400px) {
   .side-stepper {
     display: none;
   }
